[gd_scene load_steps=11 format=3 uid="uid://pnet7b2u4hu4"]

[ext_resource type="Script" path="res://World3D/Objects/Projectiles/Hitbox.gd" id="1"]
[ext_resource type="Script" path="res://World/Objects/Magic/Ice/IceProjectile.gd" id="1_ijx46"]

[sub_resource type="RectangleShape2D" id="86"]
size = Vector2(14, 14)

[sub_resource type="CircleShape2D" id="3"]
resource_local_to_scene = true
radius = 10.0499

[sub_resource type="Curve" id="92"]
min_value = -200.0
max_value = 400.0
_data = [Vector2(0, 75.6757), 0.0, 1093.5, 0, 0, Vector2(0.228546, 151.736), -914.189, -914.189, 0, 0, Vector2(1, -167.568), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="89"]
max_value = 2.5
_data = [Vector2(0, 2.49732), 0.0, 0.0, 0, 0, Vector2(1, 1.22348), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="90"]
colors = PackedColorArray(0.278431, 1, 1, 1, 0.0549683, 0.423291, 1, 1)

[sub_resource type="SpriteFrames" id="273"]
animations = []

[sub_resource type="SpriteFrames" id="34"]
animations = []

[sub_resource type="Curve" id="91"]
max_value = 3.0
_data = [Vector2(0, 2.73165), 0.0, 0.0, 0, 0, Vector2(1, 1.73165), 0.0, 0.0, 0, 0]
point_count = 2

[node name="IceProjectile" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_ijx46")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("86")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 262146
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("3")

[node name="BuffedExplosionParticles" type="CPUParticles2D" parent="."]
modulate = Color(1.2, 1.2, 1.2, 1)
emitting = false
amount = 400
lifetime = 1.4
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
linear_accel_curve = SubResource("92")
scale_amount_curve = SubResource("89")
color_ramp = SubResource("90")

[node name="BuffedExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1.2, 1.2, 1.2, 1)
position = Vector2(2, -9)
scale = Vector2(2, 2)
sprite_frames = SubResource("273")
animation = &""

[node name="Projectile" type="AnimatedSprite2D" parent="."]
modulate = Color(1.17, 1.17, 1.17, 1)
position = Vector2(10, -9)
scale = Vector2(2, 2)
sprite_frames = SubResource("34")
animation = &""
frame = 1

[node name="TrailParticles" type="Node2D" parent="."]

[node name="Particles3" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
position = Vector2(-43, 0)
emitting = false
amount = 30
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 20.0
gravity = Vector2(0, 0)
color = Color(0.454902, 1, 1, 1)

[node name="Particles2" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
position = Vector2(-43, 0)
emitting = false
amount = 30
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 20.0
gravity = Vector2(0, 0)
color = Color(0.101961, 0.67451, 1, 1)

[node name="GPUParticles3D" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
position = Vector2(-43, 0)
emitting = false
amount = 30
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 20.0
gravity = Vector2(0, 0)
color = Color(0, 0.4, 0.870588, 1)

[node name="ExplosionParticles" type="Node2D" parent="."]
position = Vector2(10, 0)

[node name="Explosion" type="CPUParticles2D" parent="ExplosionParticles"]
modulate = Color(1.12, 1.12, 1.12, 1)
emitting = false
amount = 250
lifetime = 1.4
one_shot = true
speed_scale = 2.0
explosiveness = 0.7
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
linear_accel_curve = SubResource("92")
scale_amount_curve = SubResource("89")
color_ramp = SubResource("90")

[node name="Shards" type="CPUParticles2D" parent="ExplosionParticles/Explosion"]
modulate = Color(1.12, 1.12, 1.12, 1)
emitting = false
amount = 100
lifetime = 1.4
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 40)
linear_accel_curve = SubResource("92")
scale_amount_curve = SubResource("91")
color_ramp = SubResource("90")

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]

[node name="SoundEffects2" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
